--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,11 @@ inputs:
     required: true
     default: "${{ github.workspace }}/build/reports/pluginVerifier"
 
+  report-title:
+    description: 'Report title'
+    required: true
+    default: 'Plugin Verification Results'
+
   repo-token:
     description: 'Repository token'
     required: true
@@ -58,8 +63,21 @@ runs:
       run: consolidate-report.sh ${{ inputs.plugin-verifier-report-path }} ${{ inputs.plugin-id }} ${{ inputs.plugin-version }}
 
     - name: Publish Plugin Verifier Report
+      uses: dtinth/markdown-report-action@v1
+      with:
+        name: "${{ inputs.report-title }}"
+        title: "${{ inputs.report-title }}"
+        body-file: "${{ inputs.plugin-verifier-report-path }}.md"
+
+    - name: Prepend Report Title
+      shell: bash
+      run: |
+        echo -e "## ${{ inputs.report-title }}\n" > "${{ inputs.plugin-verifier-report-path }}-comment.md"
+        cat "${{ inputs.plugin-verifier-report-path }}.md" >> "${{ inputs.plugin-verifier-report-path }}-comment.md"
+
+    - name: Publish Pull Request Comment
       uses: mshick/add-pr-comment@v2
       with:
         message-id: "intellij-plugin-verifier-report"
-        message-path: "${{ inputs.plugin-verifier-report-path }}.md"
+        message-path: "${{ inputs.plugin-verifier-report-path }}-comment.md"
         repo-token: "${{ inputs.repo-token }}"
