Add build workflow write permission for check runs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Run The Action
 
+    permissions:
+      checks: write
+
     steps:
 
       - name: Fetch Sources
