Add build workflow permissions (#8)
* Add build workflow write permission for check runs
* Add build workflow write permission for pull requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Run The Action
 
+    permissions:
+      checks: write
+      pull-requests: write
+
     steps:
 
       - name: Fetch Sources
